Coverity analysis defect 146183: Uninitialized scalar field

    • Storage Engines, Storage Engines - Server Integration
    • ALL
    • None
    • 3
    • TBD
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/storage/sorted_data_interface.h:556: UNINIT_CTOR 146183 The compiler-generated constructor for this class does not initialize "_version".

              Assignee:
              Unassigned
              Reporter:
              Coverity Collector User
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated: