SERVER-109122 Initialize _version in SortedDataInterface (#40700)

GitOrigin-RevId: 8993f8a14e89edaa1aa248a68e9edfc5099296e1